# AvCapture

./: .gitignore  CMakeLists.txt  README.md  avcapture.cpp  avcapture.h  avcapture.pc.in  avcapture_wrap.cc  avcapture_wrap.h  binding.gyp  install_dependency.sh  main.cpp  sample2.cpp
node-addon/: CMakeLists.txt
